--- a/01. 이터러블 프로그래밍 혹은 리스트 프로세싱/1.html
+++ b/01. 이터러블 프로그래밍 혹은 리스트 프로세싱/1.html
@@ -1,17 +1,42 @@
-<script src="https://unpkg.com/fxjs/dist/fx.js"></script>
-
-1. 홀수 n개 더하기
-<script>
-    function f1(limit, list) {
-        let acc = 0;
-        for (const a of list) {
-            if (a % 2) {
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script src="https://unpkg.com/fxjs/dist/fx.js"></script>
+</head>
+<body>
+    1. 홀수 n개 더하기
+    2. if를 filter로
+    3. 값 변화 후 변수 할당을 map으로
+    4. break를 take로
+    5. 축약 및 합산을 reduce로
+    <script>
+        const { L, C } = window._;
+        
+        // function f1(limit, list) {
+        //     let acc = 0;
+        //     for (const a of list) {
+        //         if (a % 2) {
+        //             const b = a * a;
+        //             acc += b;
+        //             if (--limit == 0) break;
+        //         }
+        //     }
+        //     console.log(acc);
+        // }
+        function f1(limit, list) {
+            let acc = 0;
+            for (const a of L.filter(a => a % 2, list)) {
                 const b = a * a;
                 acc += b;
                 if (--limit == 0) break;
             }
+            console.log(acc);
         }
-        console.log(acc);
-    }
-    f1(3, [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]);
-</script>
+        f1(3, [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]);
+    </script>
+</body>
+</html>
