--- a/01. 이터러블 프로그래밍 혹은 리스트 프로세싱/1.html
+++ b/01. 이터러블 프로그래밍 혹은 리스트 프로세싱/1.html
@@ -14,8 +14,6 @@
     4. break를 take로
     5. 축약 및 합산을 reduce로
     <script>
-        const { L, C } = window._;
-
         // function f1(limit, list) {
         //     let acc = 0;
         //     for (const a of list) {
@@ -27,16 +25,20 @@
         //     }
         //     console.log(acc);
         // }
+        
+        const { L, C } = window._;
+        const add = (a, b) => a + b;
         function f1(limit, list) {
-            let acc = 0;
-            for (const a of L.take(limit, L.map(a => a * a, L.filter(a => a % 2, list)))) {
-                acc += a;
-            }
-            console.log(acc);
+            _.go(
+                list,
+                L.filter(a => a % 2),
+                L.map(a => a * a),
+                L.take(limit),
+                _.reduce(add),
+                console.log
+            );
         }
-        console.time('');
         f1(3, [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]);
-        console.timeEnd('');
     </script>
 </body>
 </html>
