--- a/01. 이터러블 프로그래밍 혹은 리스트 프로세싱/1.html
+++ b/01. 이터러블 프로그래밍 혹은 리스트 프로세싱/1.html
@@ -14,21 +14,22 @@
     4. break를 take로
     5. 축약 및 합산을 reduce로
     <script>
-        // function f1(limit, list) {
-        //     let acc = 0;
-        //     for (const a of list) {
-        //         if (a % 2) {
-        //             const b = a * a;
-        //             acc += b;
-        //             if (--limit == 0) break;
-        //         }
-        //     }
-        //     console.log(acc);
-        // }
+        function f1(limit, list) {
+            let acc = 0;
+            for (const a of list) {
+                if (a % 2) {
+                    const b = a * a;
+                    acc += b;
+                    if (--limit == 0) break;
+                }
+            }
+            console.log(acc);
+        }
+        f1(3, [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]);
         
         const { L, C } = window._;
         const add = (a, b) => a + b;
-        function f1(limit, list) {
+        function f2(limit, list) {
             _.go(
                 list,
                 L.filter(a => a % 2),
@@ -38,7 +39,27 @@
                 console.log
             );
         }
-        f1(3, [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]);
+        f2(3, [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]);
+
+        console.clear();
+    </script>
+
+    6. while을 range로
+    7. 효과를 each로 구분
+    <script>
+        function f3(end) {
+            let i = 1;
+            while (i < end) {
+                console.log(i);
+                i += 2;
+            }
+        }
+        f3(10);
+
+        function f4(end) {
+            _.each(console.log, L.range(1, end, 2));
+        }
+        f4(10);
     </script>
 </body>
 </html>
