--- a/01. 이터러블 프로그래밍 혹은 리스트 프로세싱/1.html
+++ b/01. 이터러블 프로그래밍 혹은 리스트 프로세싱/1.html
@@ -80,14 +80,25 @@
             console.log
         );
 
+        // _.go(
+        //     L.range(1, 6),
+        //     L.map(s => _.go(
+        //         L.range(s),
+        //         L.map(_ => '*'),
+        //         _.reduce((a, b) => `${a}${b}`)
+        //     )),
+        //     _.reduce((a, b) => `${a}\n${b}`),
+        //     console.log
+        // );
+
         _.go(
-            L.range(1, 6),
-            L.map(s => _.go(
-                L.range(s),
-                L.map(_ => '*'),
-                _.reduce((a, b) => `${a}${b}`)
+            _.range(2, 10),
+            _.map(a => _.go(
+                _.range(1, 10),
+                _.map(b => `${a}x${b}=${a*b}`),
+                join('\n')
             )),
-            _.reduce((a, b) => `${a}\n${b}`),
+            join('\n\n'),
             console.log
         );
     </script>
