--- a/02. 명령형 습관 지우기/1.html
+++ b/02. 명령형 습관 지우기/1.html
@@ -26,8 +26,30 @@
 
     console.log(_.reduce((total, u) => total + u.age, 0, users));
 
+    const add = (a, b) => a + b;
     const ages = L.map(u => u.age);
-    console.log(_.reduce((a, b) => a + b, ages(users)));
+    console.log(_.reduce(add, ages(users)));
+    console.clear();
+</script>
+
+2. reduce 하나 보다 map + filter + reduce
+<script>
+    console.log(_.reduce((total, u) => {
+        if (u.age >= 30) return total;
+        return total + u.age;
+    }, 0, users));
+
+    console.log(
+        _.reduce(add,
+            L.map(u => u.age,
+                L.filter(u => u.age < 30, users)))
+    );
+
+    console.log(
+        _.reduce(add,
+            L.filter(n => n < 30,
+                L.map(u => u.age, users)))
+    );
 </script>
 
 </body>
