--- a/02. 명령형 습관 지우기/1.html
+++ b/02. 명령형 습관 지우기/1.html
@@ -84,6 +84,27 @@
             }, '');
     }
     console.log(query2(obj1));
+
+    const join = _.curry((sep, iter) =>
+        _.reduce((a, b) => `${a}${sep}${b}`, iter));
+
+    function query3(obj) {
+        return (
+            join('&',
+                _.map(([k, v]) => `${k}=${v}`,
+                    _.reject(([_, v]) => v === undefined, 
+                        Object.entries(obj)))));
+    }
+    console.log(query3(obj1));
+
+    const query4 = obj => _.go(
+        obj,
+        Object.entries,
+        _.reject(([_, v]) => v === undefined),
+        _.map(join('=')),
+        join('&')
+    );
+    console.log(query4(obj1));
 </script>
 
 </body>
